# poc_cv_manager

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
fixtures/: clientcompanies.sql  coalesce.sql  companies.json  cvs.json  cvs.sql  jobFunctions.json  jobfunctions.sql  keywords.json  keywords.sql  load_sql.sh  package.json  users.json  users.sql
migrations/: 20231013110042_initial.down.sql  20231013110042_initial.up.sql
src/: 0001_initial_tables.sql  authentication.rs  db_connectors.rs  main.rs
src/api/: clientcompany.rs  cv.rs  fileupload.rs  jobfunction.rs  keyword.rs  mod.rs  user.rs
src/models/: client_company.rs  cv.rs  job_function.rs  keyword.rs  mod.rs  user.rs
src/utils/: app_error.rs
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/utils/: mod.rs
