[package]
name = "poc_cv_manager"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
once_cell = "1"
salvo = { version = "0.57", features = ["oapi", "cors", "anyhow","basic-auth","test"] }
serde = {  version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono"] }
rand = "0.8"
argon2 = "0.5"
thiserror = "1.0"

[dev-dependencies]
reqwest = {version = "0.11", features = ["json", "blocking"]}